fix: change layout and spacing for the left column

--- a/style.css
+++ b/style.css
@@ -17,24 +17,11 @@ ul {
 }
 
 h3 {
-    color: #202020;
+    color: #3C4142;
     font-size: 16px;
     font-family: "Gill Sans", sans-serif;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
+    font-weight: bold;
     letter-spacing: -0.5px;
-    text-transform: uppercase;
-    margin-left: 5px;
-}
-
-h4 {
-    font-family: Arial;
-    font-size: 7px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 18px;
-    letter-spacing: 2px;
     text-transform: uppercase;
 }
 
@@ -51,7 +38,7 @@ header {
 }
 
 body {
-    width: 70%;
+    width: 50%;
     margin: auto;
     background-color: #FAF9F6;
 }
@@ -67,14 +54,20 @@ body {
 
 .columns_layout {
     display: flex;
-    position: relative;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-start;
 }
 
 .column_1 {
-    box-sizing: content-box;
+    width: 25%;
     background-color: #F2F3F5;
-    width: 30%;
     padding-right: 5px;
+    justify-content: flex-start;
+}
+
+.column_2 {
+    width: 75%;
 }
 
 .small_icon {
@@ -88,3 +81,7 @@ body {
     padding-left: 2px;
 }
 
+.credentials {
+    margin-left: 3px;
+    margin-bottom: 2em;
+}
